test/pass/internal/calltrace_should_not_include_self.lily
if calltrace()[-1].ends_with("calltrace"):
    stderr.print("Failed.")
